# First-Recon-Scanner

./: .gitignore  LICENSE  README.md  pyproject.toml  scanner.py
frscan/: __init__.py  frscan.py
